--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -99,10 +99,13 @@ install(TARGETS ${BINARY_NAME} RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}"
 install(FILES "${FLUTTER_ICU_DATA_FILE}" DESTINATION "${INSTALL_BUNDLE_DATA_DIR}"
   COMPONENT Runtime)
 
-get_filename_component(SQLITE3_LIBRARY "${SQLITE3_LIBRARY}" REALPATH)
-get_filename_component(OLM_LIBRARY "${OLM_LIBRARY}" REALPATH)
+# get_filename_component(SQLITE3_LIBRARY "${SQLITE3_LIBRARY}" REALPATH)
+# get_filename_component(OLM_LIBRARY "${OLM_LIBRARY}" REALPATH)
 
 install(FILES "${SQLITE3_LIBRARIES}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
+  COMPONENT Runtime)
+
+install(FILES "${JSONCPP_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
   COMPONENT Runtime)
 
 install(FILES "${OLM_LIBRARIES}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
