temp: roll back jsoncpp

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -101,13 +101,13 @@ install(FILES "${FLUTTER_ICU_DATA_FILE}" DESTINATION "${INSTALL_BUNDLE_DATA_DIR}
 
 get_filename_component(SQLITE3_LIBRARY "${SQLITE3_LIBRARY}" REALPATH)
 get_filename_component(OLM_LIBRARY "${OLM_LIBRARY}" REALPATH)
-get_filename_component(JSONCPP_LIBRARY "${JSONCPP_LIBRARY}" REALPATH)
+# get_filename_component(JSONCPP_LIBRARY "${JSONCPP_LIBRARY}" REALPATH)
 
 install(FILES "${SQLITE3_LIBRARIES}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
   COMPONENT Runtime)
 
-install(FILES "${JSONCPP_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
-  COMPONENT Runtime)
+# install(FILES "${JSONCPP_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
+#   COMPONENT Runtime)
 
 install(FILES "${OLM_LIBRARIES}" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
   COMPONENT Runtime)
